bIO/41 - Fix Failing test
- Also move benchmark test to new benchmark configuration.